# lldpd

./: .gitreview  Makefile.am  README.md  configure.ac  test_lldp_ft_basic_functionality.py
include/: lldp_vty.h  vtysh_ovsdb_lldp_context.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: test_lldpd_ct_call_libevent_test.py  test_lldpd_ct_counters_recovery.py  test_vtysh_ct_lldp.py
ops-tests/feature/: test_ft_lldp_basic_functionality.py  test_lldp_ft_enable_disable.py  test_lldp_ft_interface_txrx.py  test_lldp_ft_tlv.py  test_lldp_ft_wait_hold.py  test_snmpbulkget_ft_lldp.py  test_snmpget_ft_lldp.py  test_snmpgetnext_ft_lldp.py  test_snmptrap_ft_lldp.py  test_snmpwalk_ft_lldp.py
ops/docs/: AUTHORS  DESIGN.md  README.md
ops/tests/: lldp_ct_tests.md  test_lldp_ft_basic_functionality.py  test_lldpd_ct_call_libevent.py  test_lldpd_ct_counters_recovery.py
src/: Makefile.am  lldpd-structs.c  lldpd-structs.h  marshal.c  marshal.h
src/cli/: Makefile.am  lldp_vty.c  vtysh_ovsdb_lldp_context.c
src/daemon/: LLDP_MIB_traps.c  LLDP_MIB_traps.h  Makefile.am  event.c  interfaces-linux.c  interfaces.c  lldp.c  lldpd.c  lldpd.h  lldpd_ovsdb_if.c  lldpd_ovsdb_if.h  lldpd_ovsdb_if_test.c
src/lib/: Makefile.am
src/snmp/: LLDP-MIB.txt  LLDP_MIB_custom.c  LLDP_MIB_custom.h  LLDP_MIB_plugins.c  LLDP_MIB_plugins.h  LLDP_MIB_scalars.c  LLDP_MIB_scalars.h  LLDP_MIB_scalars_ovsdb_get.c  LLDP_MIB_scalars_ovsdb_get.h  LLDP_MIB_traps.c  LLDP_Mapping.json  Makefile.am  lldpConfigManAddrTable.c  lldpConfigManAddrTable.h  lldpConfigManAddrTable_data_access.c  lldpConfigManAddrTable_data_access.h  lldpConfigManAddrTable_data_get.c  lldpConfigManAddrTable_data_get.h  lldpConfigManAddrTable_data_set.c  lldpConfigManAddrTable_data_set.h  lldpConfigManAddrTable_enums.h  lldpConfigManAddrTable_interface.c  lldpConfigManAddrTable_interface.h  lldpConfigManAddrTable_oids.h  lldpConfigManAddrTable_ovsdb_get.c  lldpConfigManAddrTable_ovsdb_get.h  lldpLocManAddrTable.c  lldpLocManAddrTable.h  lldpLocManAddrTable_data_access.c  lldpLocManAddrTable_data_access.h  lldpLocManAddrTable_data_get.c  lldpLocManAddrTable_data_get.h  lldpLocManAddrTable_data_set.c  lldpLocManAddrTable_data_set.h  lldpLocManAddrTable_enums.h  lldpLocManAddrTable_interface.c  lldpLocManAddrTable_interface.h  lldpLocManAddrTable_oids.h  lldpLocManAddrTable_ovsdb_get.c  lldpLocManAddrTable_ovsdb_get.h  (+112 more)
test/: test_lldpd_ct_call_libevent.py  test_lldpd_ct_counters_recovery.py
tests/: test_lldpd_ct_counters_recovery.py  test_vtysh_ct_lldp.py
